# firestation_manager_qt

./: .clang-format  .envrc  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  default.nix  docker-compose.yaml  setup-githooks.sh
.githooks/: post-checkout  post-merge  pre-commit
db/: 01_database.sql  02_banks.sql  02_firefighters.sql  02_trainings.sql
src/: bankdialog.cpp  bankdialog.h  emptylasttablewidgetitem.cpp  emptylasttablewidgetitem.h  firefighterdialog.cpp  firefighterdialog.h  firefightertrainingdialog.cpp  firefightertrainingdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  medicalexaminationsdialog.cpp  medicalexaminationsdialog.h  trainingdialog.cpp  trainingdialog.h
